fix(table): cell width overflow

--- a/components/Table/Table.module.css
+++ b/components/Table/Table.module.css
@@ -10,6 +10,16 @@
   padding: 0.75rem 1rem;
 }
 
+.cell {
+  text-wrap: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .darkCell {
   background: rgba(246, 245, 248, 1);
+}
+.firstRow {
+  font-weight: 500;
 }
